add server side update version