@@ -1,101 +1,35 @@
-buildscript {
+plugins {
+    id "idea"
+    id "java"
+}
+
+group = 'ru.fullrest.mfr'
+
+subprojects {
+    apply plugin: 'java'
+
     ext {
-        springBootVersion = '2.1.2.RELEASE'
+        lombokVersion = '1.18.6'
+        apacheCommonVersion = '1.3.2'
+        jacksonVersion = '2.9.8'
     }
+
     repositories {
         mavenCentral()
     }
+
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-        classpath('com.google.gradle:osdetector-gradle-plugin:1.6.0')
+        //	lombok
+        compileOnly("org.projectlombok:lombok:$lombokVersion")
+        annotationProcessor("org.projectlombok:lombok:$lombokVersion")
+    }
+
+    tasks.withType(JavaCompile) {
+        sourceCompatibility = JavaVersion.VERSION_11
+        targetCompatibility = JavaVersion.VERSION_11
     }
 }
 
-apply plugin: 'java'
-apply plugin: 'idea'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
-apply plugin: 'application'
-apply plugin: 'com.google.osdetector'
-
-ext.platform = osdetector.os == 'osx' ? 'mac' : osdetector.os == 'windows' ? 'win' : osdetector.os
-
-group = 'ru.fullrest.mfr'
-version = '1.0'
-sourceCompatibility = 1.11
-mainClassName = 'ru.fullrest.mfr.plugins_configuration_utility.PluginsConfigurationUtilityApplication'
-
-
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-//	spring-boot
-    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
-    runtimeOnly('org.springframework.boot:spring-boot-devtools')
-    testImplementation('org.springframework.boot:spring-boot-starter-test')
-
-//	database
-    runtimeOnly('com.h2database:h2')
-
-//	lombok
-    compileOnly 'org.projectlombok:lombok:1.18.4'
-    annotationProcessor 'org.projectlombok:lombok:1.18.4'
-
-//	JavaFX
-    compile "org.openjfx:javafx-base:11:$platform"
-    compile "org.openjfx:javafx-graphics:11:$platform"
-    compile "org.openjfx:javafx-controls:11:$platform"
-    compile "org.openjfx:javafx-fxml:11:$platform"
-    compile "org.openjfx:javafx-swing:11:$platform"
-    compile "org.openjfx:javafx-web:11:$platform"
-    compile "org.openjfx:javafx-media:11:$platform"
-
-//  apache-commons
-    compile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
-
-//  jackson
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.8'
-
-
-}
-
-compileJava {
-    doFirst {
-        options.compilerArgs = [
-                '--module-path', classpath.asPath,
-                '--add-modules', 'javafx.controls,javafx.fxml'
-        ]
-    }
-}
-
-run {
-    doFirst {
-        jvmArgs = [
-                '--module-path', classpath.asPath,
-                '--add-modules', 'javafx.controls,javafx.fxml'
-        ]
-    }
-}
-
-jar {
-    manifest {
-        attributes 'Implementation-Title': 'Morrowind Fullrest Repack Plugins Configuration Utility',
-                'Implementation-Version': version,
-                'Main-Class': mainClassName
-    }
-    from {
-        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-    }
-}
-
-task moveJar(dependsOn: build) {
-    doLast {
-        copy {
-            from '/build/libs'
-            into 'C:/Games/M[FR]/MFRPCU'
-        }
-    }
-
+wrapper {
+    gradleVersion = '5.2.1'
 }
